[package]
name = "rustirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "rustirc"
# path = "/src/rustirc/bin/main.rs"
# [[bin]]
# name = "micro-client"
# path = "/src/micro-client/bin/main.rs"

[dependencies]
anyhow = "1.0.71"
petgraph = "0.6.3"
[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]