[package]
name = "rustirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
petgraph = "0.6.3"
serde = "1.0.164"
smol = "1.3.0"
[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
